--- a/index.html
+++ b/index.html
@@ -19,7 +19,239 @@
 </head>
 
 <body>
-    <h2>hello</h2>
+    <!-- Start Header Section -->
+    <header class="">
+        <section class="container">
+            <nav class="navbar navbar-expand-lg navbar-light  ">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#" target="_black">
+                        <img src="images/logo/brand-logo.png" alt="brand-logo"
+                            class="d-inline-block align-text-top img-fluid">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto fw-bold text-center">
+                            <li class="nav-item ">
+                                <a class="nav-link  px-3" href="#">Home</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link px-3" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link px-3" href="#">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link px-3" href="#">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link px-3" href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </section>
+
+    </header>
+    <!-- End Header Section -->
+
+    <!-- Start Hero Section -->
+    <section class="hero-bg">
+        <main class="container my-2 pb-3">
+            <div class="d-flex flex-column-reverse flex-md-row h-100 align-content-center justify-content-between ">
+                <div class="ps-3 pt-5 my-5 w-75 text-justify text-warning">
+                    <p>
+                        We Give You
+                    </p>
+                    <h1 class="fw-bold">
+                        QUALITY <span class="text-danger">AUTO REPAIR</span>
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
+                        Illo repellat ab rerum, magnam nihil excepturi?
+                    </p>
+                    <button class="btn-danger p-2 rounded-3 border-0 shadow-lg fw-bold"> Get Appointment</button>
+
+                </div>
+
+                <div class="px-3 pt-5  ">
+                    <img class="img-fluid " src="images/service-man/service-man-1.png" alt="HERO">
+                </div>
+            </div>
+        </main>
+    </section>
+    <!-- End Hero Section -->
+
+    <!-- Start Choose-Us Section -->
+    <section class=" custom-bg-color pt-4">
+        <div class="container">
+            <h2 class=" text-center fw-bold text-danger">
+                Why<span class="text-secondary"> Choose Us</span>
+            </h2>
+            <main class="row  h-auto pb-2 pt-5">
+
+                <div class="outline- col-md-8 pb-5 ">
+                    <div
+                        class="d-flex flex-column-reverse flex-md-row justify-content-between align-content-center h-auto">
+                        <div
+                            class=" d-flex flex-column-reverse flex-md-row h-auto justify-content-between align-content-center ps-5 ">
+                            <div class="icon text-center">
+                                <img class="img-fluid" src="images/icon/expert.png" alt="expert">
+                            </div>
+                            <div class="text ps-4 ">
+                                <h5 class="text-primary">Expert Mechanics</h5>
+                                <small class="text-secondary">Lorem ipsum dolor sit amet. <br> consectetur Praesentium,
+                                    eaque.</small>
+
+                            </div>
+                        </div>
+
+                        <div
+                            class="d-flex flex-column-reverse flex-md-row h-auto justify-content-between align-content-center ps-5">
+                            <div class="icon text-center">
+                                <img class="img-fluid" src="images/icon/money.png" alt="expert">
+                            </div>
+                            <div class="text ps-4">
+                                <h5 class="text-primary">Reasonable Price</h5>
+                                <small class="text-secondary">Lorem ipsum dolor sit amet. <br> consectetur Praesentium,
+                                    eaque.</small>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="d-flex flex-column-reverse flex-md-row h-auto">
+                        <div
+                            class=" d-flex flex-column-reverse flex-md-row h-auto justify-content-between align-content-center ps-5 pt-4">
+                            <div class="icon text-center">
+                                <img class="img-fluid" src="images/icon/client.png" alt="expert">
+                            </div>
+                            <div class="text ps-4">
+                                <h5 class="text-primary">Trusted By Clients</h5>
+                                <small class="text-secondary">Lorem ipsum dolor sit amet. <br> consectetur Praesentium,
+                                    eaque.</small>
+
+                            </div>
+                        </div>
+
+                        <div
+                            class="d-flex flex-column-reverse flex-md-row h-auto justify-content-between align-content-center ps-5 pt-4">
+                            <div class="icon text-center">
+                                <img class="img-fluid" src="images/icon/fast-delivery.png" alt="expert">
+                            </div>
+                            <div class="text ps-4">
+                                <h5 class="text-primary">Fast Feature Delivery</h5>
+                                <small class="text-secondary">Lorem ipsum dolor sit amet. <br> consectetur Praesentium,
+                                    eaque.</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Choose-Img -->
+                <div class="Choose-Img col-md-4 text-center">
+                    <img class="img-fluid w-100" src="images/service-man/Choose-us.jpg" alt="Choose-Img">
+                </div>
+            </main>
+        </div>
+    </section>
+    <!-- End Choose-Us Section -->
+
+    <!-- Start Services Section -->
+    <section class="custom-bg-color pb-4 pt-4">
+        <main class="container ">
+            <h2 class=" text-center fw-bold text-danger pb-3">
+                <span class="text-secondary"> Our</span> Services
+            </h2>
+            <div class="row row-cols-1 row-cols-md-4 g-3 ">
+
+                <div class="col">
+                    <div class="card border-0 shadow-lg rounded-3">
+                        <div class="inner">
+                            <img src="images/services/schedule-service.jpg" class="card-img-top img-fluid"
+                                alt="schedule-service">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title text-success fw-bold">
+                                SCHEDULE <br> 
+                                <span class="text-secondary"> SERVICES </span>
+                             </h5>
+                            <p class="card-text text-secondary">This is a longer card with supporting text below as a natural  lead-in to additional content.</p>
+                            <a class="btn-danger border-0 shadow-lg rounded-3 p-1 text-decoration-none">
+                                MORE
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card border-0 shadow-lg rounded-3">
+                        <div class="inner">
+                            <img src="images/services/preventive-service.jpg" class="card-img-top img-fluid"
+                                alt="repair-service">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title text-success fw-bold">
+                                PREVENTIVE <br> 
+                                <span class="text-secondary"> MAINTENANCE </span>
+                            </h5>
+                            <p class="card-text text-secondary">This is a longer card with supporting text below as a natural  lead-in to additional content.</p>
+                            <a class="btn-danger border-0 shadow-lg rounded-3 p-1 text-decoration-none">
+                                MORE
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card border-0 shadow-lg rounded-3 ">
+                        <div class="inner">
+                            <img src="images/services/repair-service.jpg" class="card-img-top img-fluid"
+                                alt="repair-service">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title text-success fw-bold">
+                                REPAIR <br> 
+                                <span class="text-secondary "> SERVICES </span>
+                            </h5>
+                            <p class="card-text text-secondary">This is a longer card with supporting text below as a natural  lead-in to additional content.</p>
+                            <a class="btn-danger border-0 shadow-lg rounded-3 p-1 text-decoration-none">
+                                MORE
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card border-0 shadow-lg rounded-3 ">
+                        <div class="inner">
+                            <img src="images/services/tire-wheel-service.jpg" class="card-img-top img-fluid"
+                                alt="tire-wheel-service">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title text-success fw-bold">
+                                TIRE WHEEL <br> 
+                                <span class="text-secondary"> SERVICES</span>
+                            </h5>
+                            <p class="card-text text-secondary">This is a longer card with supporting text below as a natural  lead-in to additional content.</p>
+                            <a class="btn-danger border-0 shadow-lg rounded-3 p-1 text-decoration-none">
+                                MORE
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+
+    </section>
+    <!-- End Services Section -->
+
+    <!-- bootstrap-js-bundle -->
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
