--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section class="hero-bg ">
         <main class="container my-2 pb-3 h-auto">
             <div class="d-flex flex-column-reverse flex-md-row align-content-center justify-content-between ">
-                <div class="ps-3 pt-5 my-5 w-75 text-justify text-warning">
+                <div class="ps-3 pt-5 my-5 w-75 text-justify text-white">
                     <p>
                         We Give You
                     </p>
@@ -89,7 +89,7 @@
     <section class="container pb-1 ">
         <div class="row row-cols-1 row-cols-md-3 g-5 text-white">
 
-            <div class="col card-overlapping ">
+            <div class="col card-overlapping ps-5">
                 <div class="card border-0 shadow-lg rounded-3 card-overlapping-colors mb-5" style="max-width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title fw-bold text-warning text-center">
@@ -111,8 +111,8 @@
                 </div>
             </div>
 
-            <div class="col card-overlapping ">
-                <div class="card border-0 shadow-lg rounded-3 card-overlapping-colors mb-5 h-75"
+            <div class="col card-overlapping ps-5">
+                <div class="card border-0 shadow-lg rounded-3 card-overlapping-colors mb-5 h-aut0 "
                     style="max-width: 40rem;;">
                     <div class="card-body">
                         <h5 class="card-title  fw-bold text-warning text-center">
@@ -145,7 +145,7 @@
                 </div>
             </div>
 
-            <div class="col card-overlapping ">
+            <div class="col card-overlapping ps-5">
                 <div class="card border-0 shadow-lg rounded-3  mb-5 card-overlapping-colors " style="max-width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title text-warning text-center fw-bold pb-4">
@@ -297,7 +297,7 @@
                     <div class="card border-0 shadow-lg rounded-3 card-hover-custom">
                         <div class="inner">
                             <img src="images/services/repair-service.jpg" class="card-img-top img-fluid"
-                                alt="repair-service">
+                            alt="repair-service">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title text-success fw-bold">
@@ -340,31 +340,44 @@
     </section>
     <!-- End Services Section -->
 
-    <!-- Start Hero Section -->
-    <section class="about-bg pt-5 ">
-        <main class="container ">
-            <div class="d-flex flex-column-reverse flex-md-row h-100 align-content-center justify-content-between ">
-                <div class="ps-3 pt-5 my-5 w-75 text-justify text-warning">
-                    <p>
-                        We Give You
+    <!-- Start About Section -->
+    <section class=" pt-4  pb-5">
+        <main class="container about-bg">
+            <div class="row text-white">
+                <div class="p-5 text-justify col-md ">
+                    <p class="section-intro">
+                        Come before 21th Feb
                     </p>
-                    <h1 class="fw-bold">
-                        QUALITY <span class="text-danger">AUTO REPAIR</span>
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
-                        Illo repellat ab rerum, magnam nihil excepturi?
-                    </p>
+                    <h2 class="fw-bold ">
+                        Get Upto 30% Rewards
+                    </h2>
+                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores minus, optio nisi, voluptas vel voluptates impedit labore dolores consequuntur.</p>
 
                 </div>
+                <div class="col-md ">
+                    <div class="d-flex flex-column-reverse flex-md-row h-auto">
+                        <div>
+                            <h2 class="pt-2 fw-bold">
+                                About AutoCar
+                            </h2>
+                            <small class="lh-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat eum, quod eius deserunt aliquam accusantium!</small>
 
-                <div class="px-3 pt-5  ">
-                    <img class="img-fluid" src="images/services/repair-service.jpg" alt="about">
+                            <ul>
+                                <li>Lorem ipsum dolor sit amet.</li>
+                                <li>Lorem ipsum dolor sit amet.</li>
+                                <li>Lorem ipsum dolor sit amet.</li>
+                            </ul>
+                        </div>
+                        <div class="pt-5 ">
+                            <img src="images/service-man/service-man-2.png" class="card-img-top img-fluid"
+                            alt="repair-service">
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
     </section>
-    <!-- End Hero Section -->
+    <!-- End About Section -->
 
     <!-- bootstrap-js-bundle -->
     <script src="js/bootstrap.bundle.min.js"></script>
