--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <section class="container pb-1 ">
         <div class="row row-cols-1 row-cols-md-3 g-5 text-white">
 
-            <div class="col card-overlapping ps-5">
-                <div class="card border-0 shadow-lg rounded-3 card-overlapping-colors mb-5" style="max-width: 18rem;">
+            <div class="col card-overlapping  ps-5">
+                <div class="card border-0 shadow-lg rounded-3  mb-5 phone-bg" style="max-width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title fw-bold text-warning text-center">
                             Contact Details
@@ -112,7 +112,7 @@
             </div>
 
             <div class="col card-overlapping ps-5">
-                <div class="card border-0 shadow-lg rounded-3 card-overlapping-colors mb-5 h-aut0 "
+                <div class="card border-0 shadow-lg rounded-3 percentage-bg mb-5 h-auto "
                     style="max-width: 40rem;;">
                     <div class="card-body">
                         <h5 class="card-title  fw-bold text-warning text-center">
@@ -146,7 +146,7 @@
             </div>
 
             <div class="col card-overlapping ps-5">
-                <div class="card border-0 shadow-lg rounded-3  mb-5 card-overlapping-colors " style="max-width: 18rem;">
+                <div class="card border-0 shadow-lg rounded-3  mb-5 tips-bg" style="max-width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title text-warning text-center fw-bold pb-4">
                             Vehicle Tips
