--- a/index.html
+++ b/index.html
@@ -15,16 +15,55 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
+    <link rel="shortcut icon" href="images/favicon/favicon.png" type="image/x-icon">
 </head>
 
 <body>
+    <!-- Start Connect Section -->
+    <section class="connect-bg p-2">
+        <main class="container">
+            <div class="d-flex flex-column-reverse flex-md-row align-content-center justify-content-between ps-4">
+
+                <div class="text-center ">
+                    <a class="text-decoration-none text-white" href="#">
+                        <i class="fas fa-phone-alt pe-1"></i>
+                        +08801718232160
+                    </a>
+                    <a class="text-decoration-none ps-5 text-warning" href="#">
+                        <i class="far fa-envelope-open pe-1"></i>
+                        autocar@gmail.com
+                    </a>
+                </div>
+                <div class="text-center">
+                    <a class="text-decoration-none pe-3 connected-icons" href="#">
+                        <i class="fab fa-facebook-f "></i>
+                    </a>
+
+                    <a class="text-decoration-none pe-3 connected-icons" href="#">
+                        <i class="fab fa-twitter "></i>
+                    </a>
+
+                    <a class="text-decoration-none pe-3 connected-icons" href="#">
+                        <i class="fab fa-linkedin-in "></i>
+                    </a>
+
+                    <a class="text-decoration-none connected-icons" href="#">
+                        <i class="fab fa-google-plus-g "></i>
+                    </a>
+                </div>
+
+            </div>
+        </main>
+
+    </section>
+    <!-- End Connect Section -->
+
     <!-- Start Header Section -->
-    <header class="">
+    <header class="nav-bg">
         <section class="container">
             <nav class="navbar navbar-expand-lg navbar-light  ">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#" target="_black">
+                    <a class="navbar-brand " href="#" target="_black">
                         <img src="images/logo/brand-logo.png" alt="brand-logo"
                             class="d-inline-block align-text-top img-fluid">
                     </a>
@@ -59,7 +98,7 @@
     <!-- End Header Section -->
 
     <!-- Start Hero Section -->
-    <section class="hero-bg ">
+    <section class="hero-bg">
         <main class="container my-2 pb-3 h-auto">
             <div class="d-flex flex-column-reverse flex-md-row align-content-center justify-content-between ">
                 <div class="ps-3 pt-5 my-5 w-75 text-justify text-white">
@@ -170,7 +209,7 @@
     <!-- End Contact Section -->
 
     <!-- Start Choose-Us Section -->
-    <section class=" custom-bg-color pt-5">
+    <section class=" custom-bg-color pt-3">
         <div class="container">
             <h2 class=" text-center fw-bold text-danger">
                 WHY<span class="text-secondary"> CHOOSE US</span>
